[gd_scene format=3 uid="uid://d2prbs7gyydhv"]

[ext_resource type="Script" uid="uid://o8ra0xf7gjee" path="res://scripts/character.gd" id="1_rkhd4"]
[ext_resource type="SpriteFrames" uid="uid://bv4y1vdfkn3ke" path="res://assets/character/walk_front.tres" id="2_rkhd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkhd4"]

[node name="Character" type="CharacterBody2D" unique_id=1676013416 groups=["player"]]
script = ExtResource("1_rkhd4")

[node name="Body" type="AnimatedSprite2D" parent="." unique_id=1433606351]
texture_filter = 1
position = Vector2(0, -1)
scale = Vector2(0.135, 0.135)
sprite_frames = ExtResource("2_rkhd4")
frame_progress = 0.18145631

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=946149693]
shape = SubResource("RectangleShape2D_rkhd4")

[node name="dash_timer" type="Timer" parent="." unique_id=2094510126]
wait_time = 0.25
one_shot = true

[node name="cooldown" type="Timer" parent="." unique_id=232941004]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=525642144]
zoom = Vector2(2.66, 2.66)

[connection signal="timeout" from="dash_timer" to="." method="finish_dash"]
[connection signal="timeout" from="cooldown" to="." method="finish_cooldown"]
